[package]
name = "callisto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
duckdb = { workspace = true }
polars = { workspace = true }
polars-lazy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
