[package]
name = "callisto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

callisto-engines = { workspace = true }
